--- a/mini_pupper_bringup/CMakeLists.txt
+++ b/mini_pupper_bringup/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(catkin REQUIRED COMPONENTS)
 
 catkin_package()
 
-install(DIRECTORY config launch
+install(DIRECTORY launch rviz
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
