--- a/mini_pupper_bringup/package.xml
+++ b/mini_pupper_bringup/package.xml
@@ -2,16 +2,17 @@
 <package format="2">
   <name>mini_pupper_bringup</name>
   <version>0.1.0</version>
-  <description>mini_pupper Champ Config Package</description>
+  <description>mini_pupper bringup package</description>
 
-  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
-  <author>Juan Miguel Jimeno</author>
+  <maintainer email="fae@mangdang.net">MangDang</maintainer>
+  <author email="fae@mangdang.net">MangDang</author>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>champ_base</exec_depend>
-  
+  <exec_depend>robot_localization</exec_depend>
+
 </package>
