--- a/mini_pupper_examples/package.xml
+++ b/mini_pupper_examples/package.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mini_pupper_gazebo</name>
+  <name>mini_pupper_dance</name>
   <version>0.1.0</version>
-  <description>mini_pupper Gazebo Package</description>
+  <description>mini_pupper_dance Package</description>
 
   <maintainer email="fae@mangdang.net">MangDang</maintainer>
-  <author>MangDang</author>
+  <author email="thefoxfoxfox@outlook.com">0nhc</author>
 
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>roslaunch</exec_depend>
-  <exec_depend>rviz</exec_depend>
-  <exec_depend>champ_base</exec_depend>
-
+  <exec_depend>rospy</exec_depend>
 </package>
