--- a/mini_pupper_bringup/package.xml
+++ b/mini_pupper_bringup/package.xml
@@ -11,8 +11,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>roslaunch</exec_depend>
-  <exec_depend>rviz</exec_depend>
   <exec_depend>champ_base</exec_depend>
+  <exec_depend>champ_bringup</exec_depend>
+  <exec_depend>champ_description</exec_depend>
   <exec_depend>robot_localization</exec_depend>
+  <exec_depend>ldlidar_stl_ros</exec_depend>
 
 </package>
