--- a/mini_pupper_bringup/package.xml
+++ b/mini_pupper_bringup/package.xml
@@ -16,5 +16,7 @@
   <exec_depend>champ_description</exec_depend>
   <exec_depend>robot_localization</exec_depend>
   <exec_depend>ldlidar_stl_ros</exec_depend>
+  <exec_depend>mini_pupper_control</exec_depend>
+  <exec_depend>mini_pupper_description</exec_depend>
 
 </package>
