--- a/mini_pupper_gazebo/package.xml
+++ b/mini_pupper_gazebo/package.xml
@@ -5,13 +5,14 @@
   <description>mini_pupper Gazebo Package</description>
 
   <maintainer email="fae@mangdang.net">MangDang</maintainer>
-  <author>MangDang</author>
+  <author email="fae@mangdang.net">MangDang</author>
 
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rviz</exec_depend>
-  <exec_depend>champ_base</exec_depend>
+  <exec_depend>champ_gazebo</exec_depend>
+  <exec_depend>mini_pupper_bringup</exec_depend>
 
 </package>
