Fix bringup launch

--- a/mini_pupper_description/CMakeLists.txt
+++ b/mini_pupper_description/CMakeLists.txt
@@ -8,6 +8,6 @@ catkin_package()
 
 find_package(roslaunch)
 
-install(DIRECTORY config launch meshes urdf
+install(DIRECTORY config launch meshes rviz urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
