--- a/mini_pupper_examples/package.xml
+++ b/mini_pupper_examples/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mini_pupper_dance</name>
+  <name>mini_pupper_examples</name>
   <version>0.1.0</version>
   <description>mini_pupper_dance Package</description>
 
