--- a/mini_pupper_description/package.xml
+++ b/mini_pupper_description/package.xml
@@ -13,11 +13,11 @@ for mini_pupper_description robot</p>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>joint_state_publisher</depend>
+  <depend>joint_state_publisher_gui</depend>
   <depend>roslaunch</depend>
   <depend>robot_state_publisher</depend>
   <depend>rviz</depend>
-  <depend>joint_state_publisher_gui</depend>
-  <depend>gazebo</depend>
   <export>
     <architecture_independent />
   </export>
