--- a/mini_pupper_navigation/package.xml
+++ b/mini_pupper_navigation/package.xml
@@ -13,5 +13,6 @@
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>cartographer_ros</exec_depend>
+  <exec_depend>move_base</exec_depend>
 
 </package>
