--- a/mini_pupper_navigation/package.xml
+++ b/mini_pupper_navigation/package.xml
@@ -13,6 +13,8 @@
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>cartographer_ros</exec_depend>
+  <exec_depend>amcl</exec_depend>
+  <exec_depend>gmapping</exec_depend>
   <exec_depend>move_base</exec_depend>
 
 </package>
